@@ -7,7 +7,7 @@
 
 	<groupId>com.xiaoleilu</groupId>
 	<artifactId>hutool</artifactId>
-	<version>2.7.4</version>
+	<version>2.7.5</version>
 	<name>hutool</name>
 	<description>提供最基础的工具类</description>
 	<url>https://github.com/looly/hutool</url>
